# resonance

./: .dockerignore  .env.OLD  .env.docker  .env.example  .env.test  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  README.md  architecture_diagram.mmd  auth_test.py  configure_nginx.sh  connection_pool_fix.md  create_vector_indices_fixed.py  curl.txt  debug_entry.py  debug_token.py  docker-compose.yaml  docker-compose.yml  dump_file.sql  final_test_results.md  init.sql  init_fixed.py  job_matches_675a8d782c624dae4447c20a.json  job_matches_unknown.json  nginx-matching.conf  performance_optimization_analysis.md  plain_text_resume_example.json  populate_test_data.py  proposal_experience_filter.md  pyproject.toml  raw_scores.csv  requirements.txt  run_local.sh  run_metrics_test.sh  run_with_env.py  setup.sh  (+25 more)
.bug/: 2025-01-19-applied-jobs-silent-failure.md  2025-01-19-comprehensive-bug-analysis-summary.md  2025-01-19-duplicate-redis-config.md  2025-01-19-mongodb-connection-not-awaited.md  2025-01-19-secret-exposure-in-logs.md  2025-01-19-task-manager-memory-leak.md  2025-01-19-unprotected-cron-endpoint.md
OutputJobDescriptions/: ranked_job_description_1.md  ranked_job_description_10.md  ranked_job_description_11.md  ranked_job_description_12.md  ranked_job_description_13.md  ranked_job_description_14.md  ranked_job_description_15.md  ranked_job_description_16.md  ranked_job_description_17.md  ranked_job_description_18.md  ranked_job_description_19.md  ranked_job_description_2.md  ranked_job_description_20.md  ranked_job_description_21.md  ranked_job_description_22.md  ranked_job_description_23.md  ranked_job_description_24.md  ranked_job_description_25.md  ranked_job_description_26.md  ranked_job_description_27.md  ranked_job_description_28.md  ranked_job_description_29.md  ranked_job_description_3.md  ranked_job_description_30.md  ranked_job_description_31.md  ranked_job_description_32.md  ranked_job_description_33.md  ranked_job_description_34.md  ranked_job_description_35.md  ranked_job_description_36.md  ranked_job_description_37.md  ranked_job_description_38.md  ranked_job_description_39.md  ranked_job_description_4.md  ranked_job_description_40.md  ranked_job_description_41.md  ranked_job_description_42.md  ranked_job_description_43.md  ranked_job_description_44.md  ranked_job_description_45.md  (+10 more)
app/: main.py  test_schema_changes.py
docs/: README.md  geospatial_filtering.md  index.md  matching_quality_system.md  metrics.md  pagination_limit_offset.md  performance_optimization.md  postgis_implementation.md  postgis_setup.md  quality_tracking.md  quality_tracking_plan.md  query_scheme.md  redis_caching_solution_plan.md
lib_document_finder_AIHawk-main/: match.py  requirements.txt
memory-bank/: activeContext.md  decisionLog.md  endpoint_testing_plan.md  field_removal_plan.md  job_id_uuid_implementation_plan.md  metrics_implementation_plan.md  performance_optimization_plan.md  productContext.md  progress.md  refactoring_plan.md  systemPatterns.md  vector_query_analysis.md
scripts/: README.md  check_doc_links.py  find_stale_docs.py  generate_doc_indexes.py
tools/: analyze_metrics_example.sh  analyze_raw_scores.py  analyze_slow_requests.py  check_env.py  compare_score_transformations.py  create_vector_indices_fixed.py  debug_token.py  demo_metrics.py  generate_test_token.py  (+8 more)
(+339 files in other folders)
